--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.5-Alpha3 
	- Add sorting to Video Browse
	- Changed to new Query backend for Browsing and Dynamic Playlists

--------------------------------------------------------------------------
  v.3.5-Alpha2 03/08/2009
	- Fixed caching of objects with no return value
	- Fixed updating of songs that should not be updated during catalog
		verify
	- Added default_user_level config option that allows you to define
		the user level when use_auth is false. Also allows manual
		login of admin users when use_auth is false. 
	- Fix Version checking and Version Error Message on install (Thx Paleo)
	- Moved Statistics to main menu, split out newest/popular/stats
	- Fixed bug where saved Thumbnails were almost never used
	- Fixed Localplay HTTPQ and MPD controls to reconize Live Stream
		urls. 
	- Added Localplay controls to API 
	- Added Added/Updated filters to API include the ability to specify
		a date range using ISO 8601 format with [START]/[END]
	- Changed API Date format to ISO 8601 
	- Fixed Incorrect Caching of Album records that caused the 
		Name + Year + Disk to not be respected
	- Added Lyrics Patch (Thx alister55 & momo-i)
	- Fixed password not updating when editing an HTTPQ localplay
		instance
	- Added Video support
	- Fixed normalize tracks not re-displaying playlist correctly
	- Fixed now playing now showing currently playing song
	- Fixed now playing clear all not correctly refreshing screen
	- Fixed adding object to playlist so that it correctly shows the 
		songs rather then an empty playlist
	- Added User Agent to IP History information gathering
	- Added Access Control List Wizards to make API interface
		setup easier